# aitios-tex

./: .gitignore  Cargo.toml  README.md
src/: density.rs  geom_tex.rs  lib.rs  line2d.rs  position_tex.rs  raster.rs  surfel_table.rs  texcoords.rs  uv_triangle.rs
src/blend/: guided.rs  linear.rs  mod.rs  normal.rs  pbr.rs  stops.rs
tests/: buddha_test.rs
tests/assets/: buddha.mtl
